# MLflow2ROS

./: .gitignore  README.md  app.py  build.bash  integration_test.py  log_tmp.py  pylintrc  requirements.txt  requirements_dev.txt  run.bash
.github/workflows/: pylint.yml
archive/: README.md  tracking_quickstart.ipynb
archive/model/docker/: build.bash  get_mlflow_version.bash  run.bash  run_compile.bash  run_deps.bash
archive/model/src/logreg/scripts/: logreg
archive/tracking_qs_validator/scripts/: validator
compose/: build_mlflow_base.bash  generate_dockerfile.bash  run_model.bash
default_deep_gnss_test_node/test_dgnss/: CMakeLists.txt  package.xml
default_deep_gnss_test_node/test_dgnss/launch/: test_dgnss.launch
default_deep_gnss_test_node/test_dgnss/scripts/: test_dgnss
default_deep_gnss_test_node/test_tensor_basic/: package.xml
default_deep_gnss_test_node/test_tensor_basic/scripts/: test_tensor_basic
generic/: Install.Dockerfile  RosInstall  app.py  build.bash  config.cfg  generate_dockerfile.bash  requirements.txt  run_dev.bash  run_model.bash  setup.bash
generic/rospkg/: package.xml
generic/rospkg/launch/: logreg.launch  tracking_quickstart.launch
generic/rospkg/scripts/: tracking_quickstart
generic/rospkg/srv/: tracking-quickstart.srv
generic/rospkg/tracking_quickstart/: CMakeLists.txt
generic/rospkg/tracking_quickstart/scripts/: tracking_quickstart
generic/rospkg/tracking_quickstart_msgs/: CMakeLists.txt  package.xml
generic/rospkg/tracking_quickstart_msgs/srv/: tracking_quickstart.srv
generic/src/logreg/: CMakeLists.txt  package.xml
generic/src/logreg/scripts/: logreg
generic/src/test_msgs/: package.xml
generic/src/test_msgs/srv/: PredictIris.srv
generic/src/validator/: package.xml
generic/src/validator/scripts/: validator
generic/templates/: CMakeTemplate.txt  addendum.Dockerfile  exec  exec_cmake_template.txt  launchfile.launch  msgs_cmake_template.txt  msgs_package_template.xml  packageTemplate.xml  service.srv
generic/tracking_qs_validator/: package.xml
model/: .dockerignore
model/docker/: Dockerfile  build.bash  build_stage.bash  get_mlflow_version.bash  run.bash  run_dev.bash  vars.bash
model/src/logreg/: CMakeLists.txt  package.xml
model/src/logreg/launch/: logreg.launch
model/src/logreg/scripts/: logreg  test.py
model/src/test_msgs/: CMakeLists.txt  package.xml
model/src/test_msgs/srv/: PredictIris.srv
model/src/validator/scripts/: validator
templates/: Dockerfile_addendum.tmpl  addendum.Dockerfile  exec  exec.py  exec.py.template  exec_cmake_template.txt  exec_launch_template.launch  exec_package_template.xml  service.srv
templates/model_msgs/: CMakeLists.txt.tmpl  package.xml.tmpl
templates/model_msgs/srv/: __srv_name__.srv.tmpl
templates/model_msgs_ros2/: CMakeLists.txt.tmpl  package.xml.tmpl
templates/model_msgs_ros2/srv/: __model_name__.srv.tmpl
templates/model_server/: CMakeLists.txt.tmpl  package.xml.tmpl
templates/model_server/launch/: model_server.launch.tmpl  test_model.test.tmpl
templates/model_server/scripts/: serve_model.py.tmpl  test_model.py.tmpl
templates/noetic/model_msgs/: CMakeLists.txt.tmpl
templates/noetic/model_server/: package.xml.tmpl
templates/noetic/model_server/launch/: model_server.launch.tmpl  test_model.test.tmpl
templates/noetic/model_server/scripts/: test_model.py.tmpl
tests/: README.md  build.bash  conftest.py  ros_mlflow.dockerfile  sklearn_models.py  test_integration.py  test_signature_type_conversion.py
tests/integration/: model_tensor_basic.py  model_tensorflow.py  test_integration.py
tests/integration/models/: model_sklearn_tensor_basic.py  model_tf_floats.py
tests/integration/test_nodes/: Dockerfile
tests/integration/test_nodes/src/sklearn_tensor_basic_model_msgs/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/sklearn_tensor_basic_model_msgs/srv/: sklearn_tensor_basic_model.srv
tests/integration/test_nodes/src/sklearn_tensor_basic_node/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/sklearn_tensor_basic_node/launch/: validator.launch
tests/integration/test_nodes/src/sklearn_tensor_basic_node/scripts/: sklearn_tensor_basic_node.py
tests/integration/test_nodes/src/tensor_basic_msgs/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/test_tensor_basic/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/test_tf_floats/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/test_tf_floats/launch/: validator.launch
tests/integration/test_nodes/src/test_tf_floats/scripts/: test_tf_floats.py
tests/integration/test_nodes/src/tf_floats_model_msgs/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/tf_floats_msgs/: CMakeLists.txt  package.xml
tests/integration/test_nodes/src/tf_floats_msgs/srv/: tf_floats.srv
tests/integration/test_nodes/src/tf_floats_node/: CMakeLists.txt  package.xml
tests/integration/tests/tensor_basic/: model.py
tests/integration/tests/tensor_basic/rostest/: CMakeLists.txt  package.xml
tests/integration/tests/tensor_basic/rostest/test/: test_tensor_basic  test_tensor_basic.test
tests/integration/tests/tensor_basic/test_node/: Dockerfile
tests/integration/tests/tensor_basic/test_node/src/test_tensor_basic/: CMakeLists.txt
tests/integration/tests/tensor_basic/test_node/src/test_tensor_basic/launch/: validator.launch
tests/tensor_basic/: Dockerfile  build_and_run.py  model.py  test_tensor_basic.py
tests/tensor_basic/integration_pkg/validator_node/: CMakeLists.txt  package.xml
tests/tensor_basic/integration_pkg/validator_node/launch/: validator.launch
tests/tensor_basic/integration_pkg/validator_node/scripts/: validator
tests/unit/: test_signature_type_conversion.py
(+6 files in other folders)
