<?xml version="1.0"?>
<package format="2">
  <name>tf_floats_msgs</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

</package>