<?xml version="1.0"?>
<package format="3">

  <name>test_tensor_basic</name>
  <version>0.1.0</version>
  <description>TODO</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
  <test_depend>tensor_basic_msgs</test_depend>

  <depend>tensor_basic_msgs</depend>
  <depend>tf</depend>

</package>
